--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@
     box-sizing: border-box;
     font-family: "Montserrat","IBM Plex Sans JP", serif;
     font-weight: bolder;
+    overflow: hidden;
 }
 body{
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,8 +21,8 @@ body{
 }
 .container{
     position: relative;
-    width: 75%;
-    height: 100px;
+    width: 50%;
+    height: 120px;
     border-radius: 5px;
     background-color: #ffffff;
     display: flex;
@@ -113,7 +114,7 @@ body{
     position: relative;
     margin: 50px;
     height: 55%;
-    width: 75%;
+    width: 50%;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -136,16 +137,22 @@ body{
     row-gap: 5px;
     column-gap: 10px;
     /* background-color: antiquewhite; */
-    grid-template-columns: 80px 300px;
+    grid-template-columns: 80px auto;
     grid-template-rows: auto;
+    
 }
 
-@media screen and (min-width:900px){
+@media screen and (max-width:900px){
+    .title{
+        margin-bottom: 3px;
+    }
     .container{
-        width: 50%;
+        width: 75%;
     }
     .result-container{
-        width: 50%;
+        width: 75%;
+        height: 70%;
+        margin: 10px;
     }
 }
 
